feat: add eslint and prettier
Signed-off-by: iverly <github@iverly.net>

--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -2,12 +2,12 @@
 title: Faast - A Serverless runtime in Rust
 ---
 
-import Link from "next/link";
+import Link from 'next/link';
 
 <div className="home-content">
   <div className="content-container">
     <h1 className="text-3xl font-bold">
-      Make beautiful websites <br className="sm:block hidden" />
+      Make beautiful websites <br className="hidden sm:block" />
       with Next.js & MDX
     </h1>
     <Link href="/docs">
