feat(landing): add testimonials component
Signed-off-by: iverly <github@iverly.net>

--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -6,8 +6,10 @@ import Link from 'next/link';
 
 import Features from '../components/features';
 import Hero from '../components/hero';
+import Testimonials from '../components/testimonials';
 
 <div className="flex min-h-screen flex-col overflow-hidden supports-[overflow:clip]:overflow-clip">
   <Hero />
   <Features />
+  <Testimonials />
 </div>
