feat(landing): add cta component
Signed-off-by: iverly <github@iverly.net>

--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -4,6 +4,7 @@ title: Faast - A Serverless runtime in Rust
 
 import Link from 'next/link';
 
+import CTA from '../components/cta';
 import Features from '../components/features';
 import Hero from '../components/hero';
 import Testimonials from '../components/testimonials';
@@ -12,4 +13,5 @@ import Testimonials from '../components/testimonials';
   <Hero />
   <Features />
   <Testimonials />
+  <CTA />
 </div>
