feat(landing): add features component
Signed-off-by: iverly <github@iverly.net>

--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -4,8 +4,10 @@ title: Faast - A Serverless runtime in Rust
 
 import Link from 'next/link';
 
+import Features from '../components/features';
 import Hero from '../components/hero';
 
 <div className="flex min-h-screen flex-col overflow-hidden supports-[overflow:clip]:overflow-clip">
   <Hero />
+  <Features />
 </div>
