fix: multiple typos
Signed-off-by: RedbeanGit <dubois.julien.mail@gmail.com>

--- a/pages/docs/user-guide/build-initramfs.mdx
+++ b/pages/docs/user-guide/build-initramfs.mdx
@@ -10,7 +10,7 @@ Requirements:
 
 ## Introduction
 
-Lambdo uses custom initramfs builded from Docker images. You can build it by
+Lambdo uses custom initramfs built from Docker images. You can build it by
 yourself or use prebuilt one.
 
 ## Lambdo initramfs structure
@@ -75,9 +75,9 @@ exit
 poweroff -f
 ```
 
-> **Note 1:** Your init script must be executable.
+> **Note 1:** Your init script must have execution rights.
 
-> **Note 2:** Your init script must start agent process.
+> **Note 2:** Your init script must start agent process to work with Lambdo.
 
 ## Write configuration file
 
