--- a/pages/docs/advanced/getting-involved.mdx
+++ b/pages/docs/advanced/getting-involved.mdx
@@ -13,8 +13,8 @@ aims to achieve and the guidelines you need to follow. This ensures that your
 contributions are in line with the project’s goals.
 
 - Read the documentation to understand how Faast works.
-- Take a look at our [GitHub repository](link_to_repository) to see how the
-  project is structured.
+- Take a look at our [GitHub repository](https://github.com/faast-rt/lambdo) to
+  see how the project is structured.
 
 2. **Set Up Your Development Environment**:
 
@@ -22,21 +22,18 @@ Ensure that you have all the necessary tools and dependencies installed to work
 on the project. Setting up your environment correctly helps prevent issues down
 the line.
 
-- Follow our [installation guide](link_to_installation_guide)
-
-3. **Join Our Community**:
-
-- Join our [Discord](link_to_installation_guide) to participate in discussions
-  and share your ideas. You can also ask questions and get help from the
-  community.
+- Follow our
+  [installation guide](https://faast-rt.com/docs/getting-started/installation)
 
 ## How to Contribute?
 
 Please ensure you read and adhere to our
-[Contributing Guide](link_to_contributing_guide) to streamline the process and
-align your contributions with the project's standards.
+[Contributing Guide](https://github.com/faast-rt/lambdo/blob/main/CONTRIBUTING.md)
+to streamline the process and align your contributions with the project's
+standards.
 
 ## Code of Conduct
 
 We want Faast to be a welcoming and respectful environment. Please read and
-follow our [Code of Conduct](link_to_code_of_conduct).
+follow our
+[Code of Conduct](https://github.com/faast-rt/lambdo/blob/main/CODE_OF_CONDUCT.md).
